Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-33203

Android 15 real device adb.exe cannot access files /system/bin/app_process64

XMLWordPrintable

    • Android
    • baabb845b (17.0)

      https://forum.qt.io/topic/162537/qt-creator-android-15-adb.exe-pull-system-bin-app_process64-error

      QtCreator with Android device was working fine until updated OS to Android 15.
      Now the apk is built and runs but every time it displays compile error:
      The command "<PATH>\Android\SDK\platform-tools\adb.exe -s <DEVICE_ID> pull /system/bin/app_process64 <PATH>\app_process" terminated with exit code 1.

      Message box:
      Ignore all errors? - Qt Creator
      found some build errors in current task. do you want to ignore them?
      Click Yes and the app runs, but I assume missing the step below (which I think gets a list of running processes?).

      Qt Creator COMPILE OUTPUT:
      ...
      Android package built successfully in X ms.
      – It can now be run from the selected device/emulator.
      – File: <PATH>.apk
      The process "<PATH>\androiddeployqt.exe" exited normally.
      Package deploy: Running command "<PATH>\platform-tools\adb.exe -s <DEVICE_ID> pull /system/bin/app_process64 <PATH>\app_process".
      The command "<PATH>\adb.exe -s <DEVICE_ID> pull /system/bin/app_process64 <PATH>\app_process" terminated with exit code 1.
      Package deploy: Running command "<PATH>\adb.exe -s <DEVICE_ID> pull /system/bin/linker64 <PATH>\linker64".
      Package deploy: Running command "<PATH>\adb.exe -s <DEVICE_ID> pull /system/lib64/libc.so <PATH>\libc.so".
      ...

      TESTED:
      Reinstalled Qt Creator, checked Devices, Kits, android build platform.
      Re-enabled developer options and USB debugging on device.

      Running the command manually (that produces the error) in Qt Creator terminal :
      adb: error: failed to copy '/system/bin/app_process64' to '<PATH>\android-app-process\app_process': remote open failed: Operation not permitted

      Android Studio deploys fine to the device.
      Qt Creator Emulator app runs fine.
      Is this an Android 15 problem

      Below a table to list mobile phones. Idea is to list models from same manufacturer that face the issue with some model but works okay with some other model

      Manufacturer Model Android OS Result With patch getprop
      Samsung A26 15 getprop-saa26-afterupdates.txt 
      Samsung S23 15 ¹  
      Samsung S21 15 getprop-S21.txt 

       

      ¹ The debugging starts, everything looks fine, no error is given, but the breakpoints are not hit. But Android Studio behaves in the same way, the breakpoints are marked as gray when the debugging starts.

        1. getprop-S21.txt
          58 kB
          Rami Potinkara
        2. getprop-saa26-afterupdates.txt
          53 kB
          Rami Potinkara
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            portale Alessandro Portale
            greentreefrog Gavin Read
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes