Android: Remove app_process retrieval

Amends: 8496d399d0e4dd2dc67d1ab3a28af1bae246fa68

This operation fails on newer Samsung devices and lldb doesn't require
this.

The retrieval of app_process, linker and libc.so was needed for gdb
debugging back in the early days.

Fixes: QTCREATORBUG-33203
Change-Id: Ibe754929a769364441a4c1ca17deb3740d00845e
Reviewed-by: Alessandro Portale <alessandro.portale@qt.io>