src/plugins/android/androiddebugsupport.cpp
@@ -132,7 +132,6 @@ public:
                 FilePath::removeDuplicates(solibSearchPath);
                 rp.setSolibSearchPath(solibSearchPath);
                 qCDebug(androidDebugSupportLog).noquote() << "SoLibSearchPath: " << solibSearchPath;
-                rp.setSymbolFile(androidAppProcessDir(bc).pathAppended("app_process"));
                 rp.setUseExtendedRemote(true);
                 const QString devicePreferredAbi = apkDevicePreferredAbi(bc);
                 rp.setToolChainAbi(androidAbi2Abi(devicePreferredAbi));
